--- a/app/assets/stylesheets/items.sass
+++ b/app/assets/stylesheets/items.sass
@@ -1,3 +1,6 @@
 // Place all the styles related to the items controller here.
 // They will automatically be included in application.css.
 // You can use Sass here: http://sass-lang.com/
+
+.green
+  color: green
