--- a/app/views/items/index.html.slim
+++ b/app/views/items/index.html.slim
@@ -1,2 +1,10 @@
-h1 Items#index
-p Find me in app/views/items/index.html.slim
+.row
+  = link_to 'Add item', new_item_path, class: 'btn btn-success'
+.row
+  .col-sm-12.col-md-6
+    h3 My items
+    = render 'items_table', items: @my_items
+
+  .col-sm-12.col-md-6
+    h3 Public items
+    = render 'items_table', items: @public_items
