--- a/app/views/items/index.html.slim
+++ b/app/views/items/index.html.slim
@@ -1,5 +1,12 @@
 .row
-  = link_to 'Add item', new_item_path, class: 'btn btn-success'
+  .col-sm-2
+    = link_to 'Add item', new_item_path, class: 'btn btn-success'
+  .col-sm-10.text-right
+    form.form-inline
+      .input-group
+        input.form-control type="text" name='q' placeholder="Search..." value=params[:q]
+        span.input-group-btn
+          button.btn.btn-success Search
 .row
   .col-sm-12.col-md-6
     h3 My items
