--- a/app/views/items/show.html.slim
+++ b/app/views/items/show.html.slim
@@ -12,6 +12,8 @@ p Uploaded by #{@item.user.email}
 = link_to 'Back to list', items_path
 hr
 - if @item.kind.to_s == 'video'
+  = link_to 'Watch on youtube', @item.link
+  br
   iframe width="420" height="315" src=@item.link
 
 - elsif @item.kind.to_s == 'image'
